--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
   </head>
   <body>
-    <h1>GEDELA SRIKAR</h1>
+    <h1>NEERUGANTI SAI JAYANTH</h1>
     <h3>VIT-AP</h3>
     <h3>2:30 - 4:30</h3>
 
